--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,6 +28,6 @@
   <script src="{{"/static/assets/app-20171204.min.js"| prepend: site.baseurl }}"></script>
   <script src="{{"/static/assets/blog-20171204.min.js"| prepend: site.baseurl }}"></script>
   <!-- MathJax -->
-  <script type="text/javascript" async
+  <script type="text/javascript" 
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   </head>
