--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -26,6 +26,10 @@ figure img{
   width: 350px;
 }
 
+.MathJax {
+font-size: 1.3em !important;
+}
+
 .figurecenter {
   display: table;
   margin: 0px auto;
